--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,45 @@
+:root {
+  --main-color: lightyellow;
+  --accent-color: #222;
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: lightyellow;
+  background-color: var(--main-color);
+  color: var(--accent-color);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+}
+
+body > * {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+main {
+  background-color: var(--accent-color);
+  color: var(--main-color);
+  flex: 1 0 auto;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+footer {
+  flex-direction: column;
+}
+
+@media screen and (min-width: 800px) {
+  main {
+    justify-content: center;
+  }
 }
